k8s/disabled/openwebui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui
  namespace: openwebui
  labels:
    app: openwebui
    app.kubernetes.io/name: openwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
        app.kubernetes.io/name: openwebui
    spec:
      containers:
        - name: openwebui
          image: ghcr.io/open-webui/open-webui:main@sha256:e597ba2ca4425ff40f1f677930baae1278cc1e44cea399d5f588d5ce53611910
          resources:
            limits:
              memory: 768Mi
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: openwebui-data
              mountPath: /app/backend/data
      volumes:
        - name: openwebui-data
          hostPath:
            path: /config/openwebui-data
            type: DirectoryOrCreate
